...
                            fontWeight: FontWeight.w500,
                            fontSize: 16 ///SizeConfig.safeBlockHorizontal * 7
                        ),
                      ),
                      centerTitle: true,
                      leading: IconButton(
                        key: Key('back_from_cart_key'),
                        icon: Icon(
                          Icons.keyboard_arrow_left,
                          color: Colors.black,
                        ),
                        onPressed: () async{
                          if(Provider.of<Explorer>(context, listen: false).promotionCode.isNotEmpty){
...
                                                    children: [
                                                      Container(
                                                          width: 250.0,
                                                          height: 38,
                                                          margin: EdgeInsets.only(top: SizeConfig.safeBlockVertical * 2),
                                                          child: TextFormField(
                                                            key: Key('table_number_field_key'),
                                                            textAlign: TextAlign.start,
                                                            keyboardType: TextInputType.number,
                                                            onChanged: (value) {
                                                              snapshot.tableNumber = value;
                                                            },
                                                            decoration: InputDecoration(
...
                                                            ),
                                                          ),
                                              ),
                                                      Container(
                                                        margin: EdgeInsets.only(top: SizeConfig.safeBlockVertical * 2),
                                                        child: MaterialButton(
                                                          key: Key('close_table_number_field_key'),
                                                          height: 38.0,
                                                          elevation: 0,
                                                          hoverElevation: 0,
                                                          focusElevation: 0,
                                                          highlightElevation: 0,
                                                          onPressed: () {
...
                                        margin: EdgeInsets.only(top: 10, bottom: SizeConfig.safeBlockVertical * 0),
                                        width: 198,

                                        /// media.width * .4
                                        height: 46,
                                        child: MaterialButton(
                                          key: Key('cart_buy_key'),
                                          elevation: 0,
                                          hoverElevation: 0,
                                          focusElevation: 0,
                                          highlightElevation: 0,
                                          onPressed:
                                          (orderState.tableNumber != null && orderState.tableNumber != '' && businessIsBar(context)) ||
...
