...
                    child: Stack(
                      children: [
                        Positioned.fill(
                          child: Align(
                            alignment: Alignment.center,
                            child: IconButton(
                              key: Key('cart_key'),
                              icon: Icon(
                                BuytimeIcons.shopping_cart,
                                color: BuytimeTheme.TextWhite,
                                size: 24.0,
                              ),
                              onPressed: () {
...
                                    height: 44,
                                    margin: EdgeInsets.only(top: SizeConfig.safeBlockVertical * 2, bottom: 29, right: SizeConfig.safeBlockHorizontal * 2.5),
                                    decoration: BoxDecoration(
                                        borderRadius: new BorderRadius.circular(5),
                                        border: Border.all(color: StoreProvider.of<AppState>(context).state.user.getRole() == Role.user ? (widget.tourist ? BuytimeTheme.BackgroundCerulean : BuytimeTheme.UserPrimary) : BuytimeTheme.SymbolGrey)),
                                    child: MaterialButton(
                                      key: Key('service_details_add_to_cart_key'),
                                      elevation: 0,
                                      hoverElevation: 0,
                                      focusElevation: 0,
                                      highlightElevation: 0,
                                      onPressed: StoreProvider.of<AppState>(context).state.user.getRole() == Role.user
                                          ? () {
...
                                    width: 158,

                                    ///SizeConfig.safeBlockHorizontal * 40
                                    height: 44,
                                    margin: EdgeInsets.only(top: SizeConfig.safeBlockVertical * 2, bottom: 29),
                                    child: MaterialButton(
                                      key: Key('service_details_buy_key'),
                                      elevation: 0,
                                      hoverElevation: 0,
                                      focusElevation: 0,
                                      highlightElevation: 0,
                                      onPressed: StoreProvider.of<AppState>(context).state.user.getRole() == Role.user
                                          ? () {
...
