...
                              ///Remoce/Add item & Quantity
                              show ?
                                Row(
                                children: [
                                  ///Remove item
                                  InkWell(
                                    key: Key('remove_one_item_key'),
                                    child: Container(
                                      margin: EdgeInsets.all(SizeConfig.safeBlockVertical * 1),
                                      child: Icon(
                                        Icons.remove,
                                        color: BuytimeTheme.UserPrimary,
                                        //size: 22,
...
                                        color: BuytimeTheme.TextMedium,
                                        fontSize: 14 /// mediaSize.height * 0.024
                                    ),
                                  ),
                                  ///Add item
                                  InkWell(
                                    key: Key('add_one_item_key'),
                                    child: Container(
                                      margin: EdgeInsets.all(SizeConfig.safeBlockVertical * 1),
                                      child: Icon(
                                        Icons.add,
                                        color: BuytimeTheme.UserPrimary,
                                        //size: 22,
...
