...
            fontWeight: FontWeight.w500,
            fontSize: 16 ///SizeConfig.safeBlockHorizontal * 7
        ),
      ),
      centerTitle: true,
      leading: IconButton(
        key: Key('back_cart_from_confirm_order_key'),
        icon: Icon(
          Icons.keyboard_arrow_left,
          color: Colors.black,
        ),
        onPressed: () async{

...
