...
                          child: Container(
                              margin: EdgeInsets.only(top: SizeConfig.safeBlockVertical * 3),
                              alignment: Alignment.center,
                              child: Material(
                                color: Colors.transparent,
                                child: InkWell(
                                  key: Key('free_access_key'),
                                    onTap: () {
                                      controller.pause();
                                      Navigator.of(context).pushNamed(RServiceExplorer.route);
                                    },
                                    borderRadius: BorderRadius.all(Radius.circular(5.0)),
                                    child: Container(
...
