...
        ));

    await Stripe.instance.presentPaymentSheet();
  }*/

  bool searching = false;
  static Key formKey = Key('search_field_key');
  Stream<QuerySnapshot> searchStream;

  @override
  Widget build(BuildContext context) {
    var media = MediaQuery.of(context).size;

...
                      appBar: !searching
                          ? AppBar(
                              backgroundColor: Colors.white,
                              leading: Container(
                                margin: EdgeInsets.only(top: 5),
                                child: IconButton(
                                  key: Key('action_search_button_key'),
                                  icon: Icon(
                                    Icons.search,
                                    color: Colors.black,
                                    //size: 30.0,
                                  ),
                                  //tooltip: AppLocalizations.of(context).comeBack,
...
                                    helperStyle: TextStyle(
                                      fontFamily: BuytimeTheme.FontFamily,
                                      color: Color(0xff666666),
                                      fontWeight: FontWeight.w400,
                                    ),
                                    prefixIcon: InkWell(
                                      key: Key('search_button_key'),
                                      onTap: () {
                                        debugPrint('RUI_U_service_explorer =>  done');
                                        debugPrint('RUI_U_service_explorer => SEARCH - SERVICE LENGTH: ${Provider.of<Explorer>(context, listen: false).serviceList.length}');
                                        FocusScope.of(context).unfocus();
                                        Provider.of<Explorer>(context, listen: false).searchedList.clear();
                                        //searchCategory(Provider.of<Explorer>(context, listen: false).categoryList); ///CHANGE
...
                              ),
                              actions: [
                                _searchController.text.isNotEmpty
                                    ? Container(
                                        margin: EdgeInsets.only(top: 2.5),
                                        child: IconButton(
                                          key: Key('search_clear_button_key'),
                                          icon: Icon(
                                            // Based on passwordVisible state choose the icon
                                            BuytimeIcons.remove,
                                            color: Colors.black,
                                            size: 20,
                                          ),
...
